[gd_scene load_steps=4 format=3 uid="uid://wnxwtrhh28me"]

[ext_resource type="Script" uid="uid://dnd8jts2xhcq8" path="res://canviar_carta.gd" id="1_3g10i"]
[ext_resource type="Texture2D" uid="uid://db4222k2gvj6f" path="res://Cards/CD.png" id="1_k3j2r"]
[ext_resource type="Script" uid="uid://blrmdle7bbadq" path="res://seguent _torn.gd" id="3_4kduj"]

[node name="Canviar carta" type="Node2D"]
script = ExtResource("1_3g10i")

[node name="C3" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_left = -0.0729167
anchor_bottom = 0.180556
offset_left = -124.0
offset_top = 33.0
offset_right = -4.0
offset_bottom = 200.0
icon = ExtResource("1_k3j2r")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="C4" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_right = 0.0729167
anchor_bottom = 0.180556
offset_left = 4.0
offset_top = 33.0
offset_right = 124.0
offset_bottom = 200.0
icon = ExtResource("1_k3j2r")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="C1" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_left = -0.0729167
anchor_top = -0.180556
offset_left = -124.0
offset_top = -139.0
offset_right = -4.0
offset_bottom = 28.0
icon = ExtResource("1_k3j2r")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="C2" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_top = -0.180556
anchor_right = 0.0729167
offset_left = 4.0
offset_top = -139.0
offset_right = 124.0
offset_bottom = 28.0
icon = ExtResource("1_k3j2r")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ct_agafada" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_left = -0.440972
anchor_top = -0.223765
anchor_right = -0.368056
anchor_bottom = -0.0432099
offset_left = -12.0002
offset_top = 32.9997
offset_right = 108.0
offset_bottom = 200.0
icon = ExtResource("1_k3j2r")
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Instrucció" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.517145
anchor_top = -1.17339
anchor_right = 0.517145
anchor_bottom = -1.17339
offset_left = -248.0
offset_top = -296.0
offset_right = 255.0
offset_bottom = -244.0
theme_override_font_sizes/font_size = 21
text = "Clica una carta per canviar-la per la carta agafada"

[node name="msg_final" type="Label" parent="."]
anchors_preset = -1
anchor_left = -2.22492
anchor_top = -0.115197
anchor_right = -2.22492
anchor_bottom = -0.115197
offset_left = -552.0
offset_top = -16.0
offset_right = -249.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 24
text = "La carta ha estat canviada"

[node name="Button" type="Button" parent="."]
offset_left = 296.0
offset_top = -40.0
offset_right = 480.0
offset_bottom = 66.0
text = "Següent torn"
script = ExtResource("3_4kduj")

[node name="CABO" type="Button" parent="."]
offset_left = 280.0
offset_top = -232.0
offset_right = 493.0
offset_bottom = -115.0
theme_override_font_sizes/font_size = 34
text = "CABO"

[connection signal="pressed" from="C3" to="." method="_on_c_3_pressed"]
[connection signal="pressed" from="C3" to="C3" method="_on_pressed"]
[connection signal="pressed" from="C4" to="." method="_on_c_4_pressed"]
[connection signal="pressed" from="C4" to="C4" method="_on_pressed"]
[connection signal="pressed" from="C1" to="." method="_on_c_1_pressed"]
[connection signal="pressed" from="C1" to="C1" method="_on_pressed"]
[connection signal="pressed" from="C2" to="." method="_on_c_2_pressed"]
[connection signal="pressed" from="C2" to="C2" method="_on_pressed"]
[connection signal="pressed" from="ct_agafada" to="ct_agafada" method="_on_pressed"]
